--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,17 @@
-BINARY_NAME=codeduel-be
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=codeduel2
+DB_PASSWORD=codeduel2
+DB_NAME=codeduel2
 
-ENV=production
-
-HOST=0.0.0.0
-PORT=5001
-PORT_HTTP=5000
-
-MARIADB_HOST=192.168.178.100
-MARIADB_PORT=13306
-MARIADB_USER=codeduel
-MARIADB_PASSWORD=codeduel
-MARIADB_DATABASE=codeduel
-
-AUTH_GITHUB_CLIENT_ID=xxxxxxxxxxxxxxxxxxxxxx
-AUTH_GITHUB_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+AUTH_GITHUB_CLIENT_ID=xxx
+AUTH_GITHUB_CLIENT_SECRET=xxx
 AUTH_GITHUB_CLIENT_CALLBACK_URL=http://127.0.0.1:5000/v1/auth/github/callback
 
 FRONTEND_URL=http://127.0.0.1:5173
 FRONTEND_URL_AUTH_CALLBACK=http://127.0.0.1:5173/login
 
-COOKIE_DOMAIN="127.0.0.1"
+COOKIE_DOMAIN="127.0.0.1:5173"
 COOKIE_PATH="/"
 COOKIE_HTTP_ONLY=true
 COOKIE_SECURE=false
@@ -29,12 +21,12 @@ CORS_METHODS="GET,POST,PUT,PATCH,DELETE"
 CORS_HEADERS="Content-Type, x-token, Accept, Content-Length, Accept-Encoding, Authorization,X-CSRF-Token"
 CORS_CREDENTIALS=true
 
-SSL_KEY=./ssl/server.key
-SSL_CERT=./ssl/server.crt
-SSL_CERT_FILE=/etc/ssl/certs
+LOGIN_REDIRECT=http://127.0.0.1:5173/login
 
+ACCESS_TOKEN_COOKIE_NAME=access_token
+REFRESH_TOKEN_COOKIE_NAME=refresh_token
+ACCESS_TOKEN_EXPIRES=300
+REFRESH_TOKEN_EXPIRES=2592000
 JWT_SECRET=secret
-JWT_EXPIRES_IN_MINUTES=5
-JWT_REFRESH_TOKEN_EXPIRES_IN_MINUTES=43200
-
+JWT_ISSUER=codeduel.it
 SERVICE_TOKEN=secret
