--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=codeduel2
-DB_PASSWORD=codeduel2
+DB_PASS=codeduel2
 DB_NAME=codeduel2
 
 AUTH_GITHUB_CLIENT_ID=xxx
@@ -10,8 +10,9 @@ AUTH_GITHUB_CLIENT_CALLBACK_URL=http://127.0.0.1:5000/v1/auth/github/callback
 
 FRONTEND_URL=http://127.0.0.1:5173
 FRONTEND_URL_AUTH_CALLBACK=http://127.0.0.1:5173/login
+LOGIN_REDIRECT=http://127.0.0.1:5173/login
 
-COOKIE_DOMAIN="127.0.0.1:5173"
+COOKIE_DOMAIN="127.0.0.1"
 COOKIE_PATH="/"
 COOKIE_HTTP_ONLY=true
 COOKIE_SECURE=false
@@ -21,12 +22,12 @@ CORS_METHODS="GET,POST,PUT,PATCH,DELETE"
 CORS_HEADERS="Content-Type, x-token, Accept, Content-Length, Accept-Encoding, Authorization,X-CSRF-Token"
 CORS_CREDENTIALS=true
 
-LOGIN_REDIRECT=http://127.0.0.1:5173/login
-
 ACCESS_TOKEN_COOKIE_NAME=access_token
-REFRESH_TOKEN_COOKIE_NAME=refresh_token
 ACCESS_TOKEN_EXPIRES=300
+REFRESH_TOKEN_COOKIE_NAME=refresh_token
 REFRESH_TOKEN_EXPIRES=2592000
+
 JWT_SECRET=secret
 JWT_ISSUER=codeduel.it
+
 SERVICE_TOKEN=secret
