--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "omnisharp.organizeImportsOnFormat": true,
-    "editor.formatOnSave": true
+	"omnisharp.organizeImportsOnFormat": true,
+	"editor.formatOnSave": true,
+	"cSpell.words": ["Swashbuckle"]
 }
