fix jwt signkey error and updated envs

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ AUTH_GITHUB_CLIENT_CALLBACK_URL=http://127.0.0.1:5000/v1/auth/github/callback
 FRONTEND_URL=http://127.0.0.1:5173
 FRONTEND_URL_AUTH_CALLBACK=http://127.0.0.1:5173/login
 LOGIN_REDIRECT=http://127.0.0.1:5173/login
+ALLOWED_DOMAINS=codeduel.it,127.0.0.1,localhost
 
 COOKIE_DOMAIN="127.0.0.1"
 COOKIE_PATH="/"
